# YouTrend

./: .gitignore  README.md  _config.yml  demo_youtrend.ipynb  docker-compose.yml  mkdocs.yml  nlp_analysis.ipynb  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflow/: build.yml  ci_cd.yml  publish.yml
.github/workflows/: jekyll-gh-pages.yml
data/: Dataset_0.csv  Dataset_1.csv  Dataset_2.csv  Dataset_3.csv  Dataset_4.csv  Dataset_5.csv  Dataset_6.csv  FR_20240105_trends.csv  _dataset_english_youtube_10_12_23.csv  _dataset_french_youtube_10_12_23.csv  duration_model.pickle  english_youtube_10_12_23.csv  videos_24_11_2023.txt
demos/: Final_duration_model.ipynb  demo_youtrend.ipynb  duration_model.ipynb  duration_model_yed.ipynb  for_yedidia.ipynb  make_prediction_examples.ipynb  nlp_analysis.ipynb  panel_data_df2.csv  random_test.ipynb  scrape_panel_data.ipynb  scrape_panel_data_SSP_CLOUD.ipynb  topic_modelling.ipynb  youtrend_scraper_demo.ipynb  youtrend_scraper_demo.py
docs/: app.md  duration_model.md  home.md  index.md  scraper.md
duration_model/: etl.ipynb  make_predictions.py  modelling.ipynb  utils.py
duration_model/data/: train_duration_sample.csv
duration_model/models/: duration_model.pickle
etl/: Dockerfile  requirements.txt  scraper.py
scraper/: requirements.txt  scraper.py
src/: random_test.ipynb  scraper.py
src/models/: text_to_img.py
src/nlp/: descriptives.py
tests/: README.md  test_duration_model_utils.py  test_make_prediction.py
web_app/: Dockerfile  README.md  app.py  duration_model_OUMAR.ipynb  requirements.txt
(+39 files in other folders)
