[project]
name = "youtrend"
version = "0.0.0"
description = "YouTube Trending Topics"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "loguru==0.6.0",
  "pydantic==1.9.1",
  "PyYAML==6.0",
  "requests",
  "nltk",
  "numpy"
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
  { include = "src" },
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov[all]", "pylint==2.14.5"]
dev = ["build",
       "twine",
       "mkdocs==1.5.2",
       "mkdocs-material==9.3.1",
       "mkdocs-material-extensions==1.1.1", 
       "mkdocs-section-index==0.3.7"]